# FastAPI-Starter

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  alembic.ini  pyproject.toml  worker.sh
deploy/: api.dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml  worker.dockerfile
package/: pyproject.toml
package/tests/data/: example1.json
package/wellplanner_client/: __init__.py  client.py  models.py
project/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
project/db/mongo/: client.py
project/db/pg/: base.py  utils.py
project/db/pg/dao/: dummy_dao.py
project/db/pg/migrations/: env.py
project/db/pg/models/: __init__.py  dummy_model.py
project/queue/: celery.py  pre_start.py  worker.py
project/services/: __init__.py
project/services/rabbit/: lifetime.py
project/services/redis/: lifetime.py
project/tests/: test_dummy.py
project/web/: __init__.py  application.py  lifetime.py
project/web/api/: __init__.py  router.py
project/web/api/docs/: __init__.py
project/web/api/dummy/: __init__.py  views.py
project/web/api/echo/: __init__.py  views.py
project/web/api/monitoring/: __init__.py
project/web/api/rabbit/: __init__.py  views.py
project/web/api/redis/: __init__.py  views.py
