[tool.poetry]
name = "project"
version = "0.1.0"
description = "Project Template for FastAPI"
authors = [
  "Anton Petrov"
]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = { version = "^0.21.1", extras = ["standard"] }
pydantic = {version = "^1.10.7", extras = ["dotenv"]}
yarl = "^1.9.2"
ujson = "^5.7.0"
SQLAlchemy = {version = "^1.4.47", extras = ["mypy", "asyncio"]}
alembic = "^1.10.4"
asyncpg = {version = "^0.27.0", extras = ["sa"]}
redis = {version = "^4.5.4", extras = ["hiredis"]}
aiofiles = "^23.1.0"
httptools = "^0.5.0"
aio-pika = "^9.0.5"
prometheus-client = "^0.16.0"
prometheus-fastapi-instrumentator = "6.0.0"
sentry-sdk = "^1.9.9"
opentelemetry-api = "^1.15.0"
opentelemetry-sdk = "^1.15.0"
opentelemetry-exporter-otlp = "^1.15.0"
opentelemetry-instrumentation = "^0.36b0"
opentelemetry-instrumentation-fastapi = "^0.36b0"
opentelemetry-instrumentation-redis = "^0.36b0"
opentelemetry-instrumentation-sqlalchemy = "^0.36b0"
opentelemetry-instrumentation-aio-pika = "^0.36b0"
loguru = "^0.7.0"
greenlet = "^2.0.2"
celery = {extras = ["ampq", "redis", "yaml"], version = "^5.2.7"}
tenacity = "^8.1.0"
motor = {extras = ["srv", "zstd"], version = "^3.1.2"}
beanie = "^1.18.0"
package = {path = "package"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "~4.0.1"
mypy = "^1.2.0"
isort = "^5.10.1"
yesqa = "^1.4.0"
pre-commit = "^3.2.2"
wemake-python-styleguide = "^0.17.0"
black = "^22.8.0"
autoflake = "^1.6.1"
SQLAlchemy = {version = "^1.4.47", extras = ["mypy"]}
pytest-cov = "^4.0.0"
anyio = "^3.6.1"
pytest-env = "^0.6.2"
fakeredis = "^2.11.1"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.18.0"
bpython = "^0.24"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["project",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "project_DB_BASE=project_test",
    "project_SENTRY_DSN=",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
